--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=NagoriShop
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Nqd6UZIlWeu64u7ijjngtImz1dINDeX7IJDghT2SIs0=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+QRIS_API_KEY=139139231204130
+QRIS_MID=FM2407270952
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +14,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=db_nagori_shop
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,12 +32,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=kojolah.algibrani@gmail.com
+MAIL_PASSWORD=cpudmuedqbgmtpcw
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="no-reply@nagori.id"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
