--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=NagoriShop
+APP_NAME=KodaiNagori
 APP_ENV=local
 APP_KEY=base64:Nqd6UZIlWeu64u7ijjngtImz1dINDeX7IJDghT2SIs0=
 APP_DEBUG=true
